--- a/jersey/pom.xml
+++ b/jersey/pom.xml
@@ -50,15 +50,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
-            <version>${jersey.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
-           <!-- <scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
